--- a/style.css
+++ b/style.css
@@ -1,3 +1,71 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+#chat-container {
+  @apply flex-1 p-4 overflow-auto rounded-l-xl;
+  border: 1px;
+}
+
+.message {
+  @apply mb-4 flex items-end;
+}
+
+.message.User {
+  @apply justify-end;
+}
+
+.message.Bot {
+  @apply justify-start;
+}
+
+.message .content {
+  @apply p-4 rounded-2xl max-w-full;
+}
+
+.message.User .content {
+  @apply bg-blue-500 text-white ml-2;
+  border-radius: 20px 20px 0 20px;
+}
+
+.message.Bot .content {
+  @apply bg-blue-100 text-black mr-2 ;
+  border-radius: 20px 20px 20px 0;
+}
+
+.message .avatar {
+  @apply w-10 h-10 rounded-full;
+}
+
+.message.User .avatar {
+  @apply ml-2;
+}
+
+.message.Bot .avatar {
+  @apply mr-2;
+}
+
+.message .header {
+  @apply flex justify-between items-center mb-1;
+}
+
+.message .name {
+  @apply font-bold;
+}
+
+.message .timestamp {
+  @apply text-xs;
+}
+
+.message.User .timestamp {
+  @apply text-white ml-2;
+}
+
+.message.Bot .timestamp {
+  @apply text-black;
+}
+
+#commandList li {
+  @apply p-2 mb-2 bg-gray-200 text-gray-600 rounded-xl;
+  cursor: default;
+}
